saint-lascivious.github.io: a very good boy
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   newsandupdates.html
 - new file:   resources/images/willow.jpg
 - new file:   resources/images/willow.png
 - new file:   resources/images/willow.webp
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -61,6 +61,7 @@
     <link rel="preload" as="image" href="resources/images/pihole_percent-month.webp" type="image/webp" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/pihole_percent-year.webp" type="image/webp" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/farquaad.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="resources/images/willow.webp" type="image/webp" fetchpriority="high">
 
     <link rel="preload" as="style" href="resources/stylesheets/material.orange-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.orange-red.min.css">
@@ -200,6 +201,7 @@
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
             <ul>
+              <li><a href="newsandupdates.html#averygoodboy" class="embiggen">A Very Good Boy</a></li>
               <li><a href="newsandupdates.html#oldblognewtricks" class="embiggen">Old Blog, New Tricks</a></li>
               <li><a href="newsandupdates.html#everycatdeservesscritchesalways" class="embiggen">Every Cat Deserves Scritches, Always</a></li>
               <li><a href="newsandupdates.html#somepunaboutblocksorblocking" class="embiggen">Some Pun About Blocks or Blocking</a></li>
@@ -213,6 +215,35 @@
               <li><a href="devdiary.html#devdiary" class="embiggen">Dev Diary</a></li>
               <li><a href="archive.html#archivedposts" class="embiggen">Archived Posts</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="averygoodboy">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">A Very Good Boy</h3>
+            <p class="embiggen" id="datetime">
+              first posted on Wednesday, 11 October 2023 22:30+13:00 (NZDST)
+            </p>
+            <p class="embiggen sainternet-subheader-centered">
+              Willow (Bill) Pearce
+            </p>
+            <div class="enlift rounded-corners shadow-boxing">
+              <picture id="image-willow">
+                <source srcset="resources/images/willow.webp" type="image/webp">
+                <source srcset="resources/images/willow.png" type="image/png">
+                <source srcset="resources/images/willow.jpg" type="image/jpeg">
+                <img src="resources/images/willow.jpg" width="480" height="480" alt="In memory of Willow (Bill) Pearce, age 15, 11 October 2023.">
+              </picture>
+              <picture class="mdl-tooltip mdl-tooltip--top" for="image-willow">
+                In memory of Willow (Bill) Pearce, age 15, 11 October 2023.
+              </picture>
+            </div>
+            <p>
+              We mourn the loss, as well as celebrate the life of, my very best friend Willow (Bill) Pearce who would have been taken from this life too soon at any age.
+            </p>
+            <p>
+              I love you so very much my boy.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="oldblognewtricks">
