saint-lascivious.github.io: don't do title-to-home on home page
 - it's kinda redundant
 - bump service worker version to 2.0.1

Changes to be committed:
 - modified:   .formatted/index.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   index.html
 - modified:   serviceworker.min.js

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -126,7 +126,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
-          <span class="embiggen mdl-layout-title"><a href="index.html" class="subterfuge mdl-color-text--primary-contrast">sainternet.xyz</a></span>
+          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
