saint-lascivious.github.io: break things
 - s/filtereddns/dns/

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - renamed:    .formatted/filtereddns.html -> .formatted/dns.html
 - modified:   .formatted/downloads.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/test.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - new file:   dns.html
 - modified:   downloads.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   test.html
 - modified:   testsainternet.html

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -110,8 +110,8 @@
     <link rel="prerender" href="index.html">
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="dns.html" as="document">
+    <link rel="prerender" href="dns.html">
     <link rel="prefetch" href="pokedexoverdns.html" as="document">
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
@@ -135,7 +135,7 @@
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
             <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
@@ -147,7 +147,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;FAQ</a>
           <a class="embiggen mdl-navigation__link" href="#connecttosainternet">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;<b>Connect to Sainternet</b></a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Ports and Protocols</a>
@@ -167,7 +167,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="dns.html">DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a>
             </div>
           </div>
         </div>
