--- a/.formatted/dns.html
+++ b/.formatted/dns.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  sainternet.xyz - filtereddns.html
+  sainternet.xyz - dns.html
   Copyright 2023 saint-lascivious (Hayden Pearce). All rights reserved.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -54,7 +54,7 @@
     <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
     <meta name="msapplication-TileColor" content="#ef5350">
 
-    <link rel="canonical" href="https://sainternet.xyz/filtereddns.html">
+    <link rel="canonical" href="https://sainternet.xyz/dns.html">
 
     <link rel="preload" as="style" href="resources/stylesheets/material.amber-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.amber-red.min.css">
@@ -140,7 +140,7 @@
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
+            <a class="embiggen mdl-navigation__link" href="#dns"><b>DNS</b></a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
             <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
@@ -152,7 +152,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="#filtereddns"><b>Filtered DNS</b></a>
+          <a class="embiggen mdl-navigation__link" href="#dns"><b>DNS</b></a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;FAQ</a>
           <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Ports and Protocols</a>
@@ -172,14 +172,14 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#dns"><b>DNS</b></a>
             </div>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid" id="filtereddns">
+        <div class="sainternet-container mdl-grid" id="dns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 class="embiggen">Filtered DNS</h3>
+            <h3 class="embiggen">DNS</h3>
             <ul>
               <li><a href="frequentlyaskedquestions.html#frequentlyaskedquestions" class="embiggen">Frequently Asked Questions</a></li>
               <li><a href="connecttosainternet.html#connecttosainternet" class="embiggen">Connect to Sainternet</a></li>
