--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -101,8 +101,8 @@
     <link rel="prerender" href="index.html">
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="dns.html" as="document">
+    <link rel="prerender" href="dns.html">
     <link rel="prefetch" href="pokedexoverdns.html" as="document">
     <link rel="prerender" href="pokedexoverdns.html">
 
@@ -124,7 +124,7 @@
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
             <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
@@ -136,7 +136,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="#projects"><b>Popular Projects</b></a>
         </nav>
