--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -130,8 +130,8 @@
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="dns.html" as="document">
+    <link rel="prerender" href="dns.html">
     <link rel="prefetch" href="pokedexoverdns.html" as="document">
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
@@ -161,7 +161,7 @@
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
-            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
             <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
@@ -175,7 +175,7 @@
           <a class="embiggen mdl-navigation__link" href="#newsandupdates"><b>News and Updates</b></a>
           <a class="embiggen mdl-navigation__link" href="devdiary.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Dev Diary</a>
           <a class="embiggen mdl-navigation__link" href="archive.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Archived Posts</a>
-          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
@@ -297,10 +297,10 @@
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <h3 class="embiggen">Every Cat Deserves Scritches, Always</h3>
             <p class="embiggen" id="datetime">
-              first posted on Thursday, 1 June 2023 00:20+12:00 (NZST)
+              first posted on Thursday, 1 June 2023 00:20+12:00 (NZST)<br>updated on Tuesday, 17 October 2023 21:00+12:00 (NZDST)
             </p>
             <p>
-              The ECDSA <a href="newsandupdates.html#certaindoom">certificate transition</a> for <code>dns.sainternet.xyz</code> <a href="filtereddns.html#filtereddns">filtered DNS</a> is live.
+              The ECDSA <a href="newsandupdates.html#certaindoom">certificate transition</a> for <code>dns.sainternet.xyz</code> <a href="dns.html#dns">DNS</a> is live.
             </p>
           </div>
         </div>
@@ -546,7 +546,7 @@
               first posted on Tuesday, 11 April 2023 01:00+12:00 (NZST)<br>updated on Friday, 2 June 2023 00:15+12:00 (NZST)
             </p>
             <p>
-              Pokémon Name to <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN) queries using <code>dns.sainternet.xyz</code> <a href="filtereddns.html">Filtered DNS</a> <a href="pokedexoverdns.html">Pokédex over DNS</a> now support multiple languages. English (US), Japanese (roomaji), French and German.
+              Pokémon Name to <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN) queries using <code>dns.sainternet.xyz</code> <a href="dns.html">DNS</a> <a href="pokedexoverdns.html">Pokédex over DNS</a> now support multiple languages. English (US), Japanese (roomaji), French and German.
             </p>
             <p>
               NPN to Pokémon Name queries now give a response featuring all supported languages in the following format.
