--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -108,8 +108,8 @@
     <link rel="prerender" href="index.html">
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="dns.html" as="document">
+    <link rel="prerender" href="dns.html">
     <link rel="prefetch" href="pokedexoverdns.html" as="document">
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
@@ -133,7 +133,7 @@
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
             <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+            <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
             <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
@@ -145,7 +145,7 @@
         <nav class="mdl-navigation">
           <a class="embiggen mdl-navigation__link" href="index.html">Home</a>
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
+          <a class="embiggen mdl-navigation__link" href="dns.html">DNS</a>
           <a class="embiggen mdl-navigation__link" href="frequentlyaskedquestions.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;FAQ</a>
           <a class="embiggen mdl-navigation__link" href="connecttosainternet.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Connect to Sainternet</a>
           <a class="embiggen mdl-navigation__link" href="portsandprotocols.html">&nbsp;<icon class="material-icons">arrow_right</icon>&nbsp;Ports and Protocols</a>
@@ -165,7 +165,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="dns.html">DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a>
             </div>
           </div>
         </div>
