saint-lascivious.github.io: cleanup do53/{t|u}dp, minors
 - bump service worker version to 2.1.2

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   pokedexoverdns.html
 - modified:   serviceworker.min.js
 - modified:   testsainternet.html

--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -332,7 +332,7 @@
               National Pokédex Unbound Configuration
             </p>
             <p>
-              <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data record configuration for the <b>.pokedex</b> virtual domain available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
+              A local-data record configuration file for the <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> DNS resolver describing the <code>.pokedex</code> virtual domain is available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
             </p>
           </div>
         </div>
